--- a/CRUDUser202/nbproject/project.properties
+++ b/CRUDUser202/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CRUDUser202
 excludes=
+file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\HP\\Desktop\\Nueva carpeta (3)\\5cuatrimestre\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-9.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
